-- =====================================================
-- LIBRO DIGITAL — academicService (esquema normalizado 3FN)
-- Base de datos: librodigital_academic
-- Puerto del servicio: 8092
-- Fecha: 2026-06-20
-- =====================================================
-- Sin FK a authService: user_id es referencia lógica por ID.
-- =====================================================

-- -----------------------------------------------------
-- CATÁLOGOS
-- -----------------------------------------------------

CREATE TABLE IF NOT EXISTS student_statuses (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS teacher_statuses (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS course_statuses (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS enrollment_statuses (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS evaluation_types (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS evaluation_statuses (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS grade_statuses (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS relationship_types (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS contract_types (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS subject_types (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS shifts (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS education_levels (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL,
    stage VARCHAR(20)  NOT NULL
);

CREATE TABLE IF NOT EXISTS academic_years (
    id         SMALLINT PRIMARY KEY,
    year       INTEGER     NOT NULL UNIQUE,
    code       VARCHAR(10) NOT NULL UNIQUE,
    start_date DATE        NOT NULL
);

-- -----------------------------------------------------
-- ENTIDADES PRINCIPALES
-- -----------------------------------------------------

CREATE TABLE IF NOT EXISTS guardians (
    id               BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    rut              VARCHAR(255) NOT NULL UNIQUE,
    first_name       VARCHAR(255) NOT NULL,
    last_name        VARCHAR(255) NOT NULL,
    second_last_name VARCHAR(255),
    email            VARCHAR(255) NOT NULL UNIQUE,
    phone            VARCHAR(255) NOT NULL,
    emergency_phone  VARCHAR(255),
    address          VARCHAR(255),
    commune          VARCHAR(255),
    city             VARCHAR(255),
    relationship_id  SMALLINT     NOT NULL,
    occupation       VARCHAR(255),
    workplace        VARCHAR(255),
    work_phone       VARCHAR(255),
    is_primary       BOOLEAN      NOT NULL DEFAULT TRUE,
    user_id          BIGINT,
    created_at       TIMESTAMP,
    updated_at       TIMESTAMP
);

CREATE TABLE IF NOT EXISTS teachers (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    rut               VARCHAR(255) NOT NULL UNIQUE,
    first_name        VARCHAR(255) NOT NULL,
    last_name         VARCHAR(255) NOT NULL,
    second_last_name  VARCHAR(255),
    email             VARCHAR(255) NOT NULL UNIQUE,
    phone             VARCHAR(255),
    address           VARCHAR(255),
    commune           VARCHAR(255),
    city              VARCHAR(255),
    employee_number   VARCHAR(255) UNIQUE,
    specialization    VARCHAR(255),
    education_level   VARCHAR(255),
    hire_date         DATE,
    contract_type_id  SMALLINT,
    teacher_status_id SMALLINT     NOT NULL,
    auth_username     VARCHAR(100) UNIQUE,
    user_id           BIGINT UNIQUE,
    created_at        TIMESTAMP,
    updated_at        TIMESTAMP
);

CREATE TABLE IF NOT EXISTS students (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    rut               VARCHAR(255) NOT NULL,
    first_name        VARCHAR(255) NOT NULL,
    second_name       VARCHAR(255),
    last_name         VARCHAR(255) NOT NULL,
    mother_last_name  VARCHAR(255),
    email             VARCHAR(255),
    phone             VARCHAR(255),
    address           VARCHAR(255),
    commune           VARCHAR(255),
    city              VARCHAR(255),
    date_of_birth     DATE,
    enrollment_number VARCHAR(255) UNIQUE,
    student_status_id SMALLINT     NOT NULL,
    admission_date    DATE,
    withdrawal_date   DATE,
    guardian_id       BIGINT,
    user_id           BIGINT,
    created_at        TIMESTAMP,
    updated_at        TIMESTAMP
);

CREATE TABLE IF NOT EXISTS courses (
    id               BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name             VARCHAR(255) NOT NULL,
    head_teacher_id  BIGINT,
    max_capacity     INTEGER,
    classroom        VARCHAR(255),
    course_status_id SMALLINT     NOT NULL,
    shift_id         SMALLINT,
    level_id         SMALLINT,
    academic_year_id SMALLINT     NOT NULL,
    created_at       TIMESTAMP,
    updated_at       TIMESTAMP
);

CREATE TABLE IF NOT EXISTS subjects (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    subject_name    VARCHAR(255),
    subject_code    VARCHAR(255),
    description     VARCHAR(255),
    subject_type_id SMALLINT,
    weekly_hours    INTEGER,
    teacher_id      BIGINT,
    course_id       BIGINT,
    created_at      TIMESTAMP,
    updated_at      TIMESTAMP
);

CREATE TABLE IF NOT EXISTS enrollments (
    id                   BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    student_id           BIGINT,
    course_id            BIGINT,
    enrollment_date      DATE,
    academic_year_id     SMALLINT NOT NULL,
    enrollment_status_id SMALLINT NOT NULL,
    is_regular           BOOLEAN,
    observations         VARCHAR(255),
    created_at           TIMESTAMP,
    updated_at           TIMESTAMP
);

CREATE TABLE IF NOT EXISTS evaluations (
    id                   BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    subject_id           BIGINT,
    name                 VARCHAR(255),
    date                 DATE,
    evaluation_type_id   SMALLINT NOT NULL,
    evaluation_status_id SMALLINT NOT NULL,
    max_score            DOUBLE PRECISION,
    weight               DOUBLE PRECISION,
    description          VARCHAR(255),
    created_at           TIMESTAMP,
    updated_at           TIMESTAMP
);

CREATE TABLE IF NOT EXISTS grades (
    id                   BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    student_id           BIGINT       NOT NULL,
    evaluation_id        BIGINT       NOT NULL,
    score                NUMERIC(5,2) NOT NULL,
    grade_date           DATE         NOT NULL,
    grade_status_id      SMALLINT     NOT NULL,
    teacher_comments     VARCHAR(1000),
    is_absent            BOOLEAN DEFAULT FALSE,
    graded_by_teacher_id BIGINT,
    created_at           TIMESTAMP,
    updated_at           TIMESTAMP
);

-- -----------------------------------------------------
-- CLAVES FORÁNEAS
-- -----------------------------------------------------

ALTER TABLE guardians DROP CONSTRAINT IF EXISTS fk_guardians_relationship;
ALTER TABLE guardians ADD CONSTRAINT fk_guardians_relationship
    FOREIGN KEY (relationship_id) REFERENCES relationship_types(id);

ALTER TABLE teachers DROP CONSTRAINT IF EXISTS fk_teachers_status;
ALTER TABLE teachers ADD CONSTRAINT fk_teachers_status
    FOREIGN KEY (teacher_status_id) REFERENCES teacher_statuses(id);

ALTER TABLE teachers DROP CONSTRAINT IF EXISTS fk_teachers_contract;
ALTER TABLE teachers ADD CONSTRAINT fk_teachers_contract
    FOREIGN KEY (contract_type_id) REFERENCES contract_types(id);

ALTER TABLE students DROP CONSTRAINT IF EXISTS fk_students_guardian;
ALTER TABLE students ADD CONSTRAINT fk_students_guardian
    FOREIGN KEY (guardian_id) REFERENCES guardians(id);

ALTER TABLE students DROP CONSTRAINT IF EXISTS fk_students_status;
ALTER TABLE students ADD CONSTRAINT fk_students_status
    FOREIGN KEY (student_status_id) REFERENCES student_statuses(id);

ALTER TABLE courses DROP CONSTRAINT IF EXISTS fk_courses_head_teacher;
ALTER TABLE courses ADD CONSTRAINT fk_courses_head_teacher
    FOREIGN KEY (head_teacher_id) REFERENCES teachers(id);

ALTER TABLE courses DROP CONSTRAINT IF EXISTS fk_courses_status;
ALTER TABLE courses ADD CONSTRAINT fk_courses_status
    FOREIGN KEY (course_status_id) REFERENCES course_statuses(id);

ALTER TABLE courses DROP CONSTRAINT IF EXISTS fk_courses_shift;
ALTER TABLE courses ADD CONSTRAINT fk_courses_shift
    FOREIGN KEY (shift_id) REFERENCES shifts(id);

ALTER TABLE courses DROP CONSTRAINT IF EXISTS fk_courses_level;
ALTER TABLE courses ADD CONSTRAINT fk_courses_level
    FOREIGN KEY (level_id) REFERENCES education_levels(id);

ALTER TABLE courses DROP CONSTRAINT IF EXISTS fk_courses_academic_year;
ALTER TABLE courses ADD CONSTRAINT fk_courses_academic_year
    FOREIGN KEY (academic_year_id) REFERENCES academic_years(id);

ALTER TABLE subjects DROP CONSTRAINT IF EXISTS fk_subjects_teacher;
ALTER TABLE subjects ADD CONSTRAINT fk_subjects_teacher
    FOREIGN KEY (teacher_id) REFERENCES teachers(id);

ALTER TABLE subjects DROP CONSTRAINT IF EXISTS fk_subjects_course;
ALTER TABLE subjects ADD CONSTRAINT fk_subjects_course
    FOREIGN KEY (course_id) REFERENCES courses(id);

ALTER TABLE subjects DROP CONSTRAINT IF EXISTS fk_subjects_type;
ALTER TABLE subjects ADD CONSTRAINT fk_subjects_type
    FOREIGN KEY (subject_type_id) REFERENCES subject_types(id);

ALTER TABLE enrollments DROP CONSTRAINT IF EXISTS fk_enrollments_student;
ALTER TABLE enrollments ADD CONSTRAINT fk_enrollments_student
    FOREIGN KEY (student_id) REFERENCES students(id);

ALTER TABLE enrollments DROP CONSTRAINT IF EXISTS fk_enrollments_course;
ALTER TABLE enrollments ADD CONSTRAINT fk_enrollments_course
    FOREIGN KEY (course_id) REFERENCES courses(id);

ALTER TABLE enrollments DROP CONSTRAINT IF EXISTS fk_enrollments_status;
ALTER TABLE enrollments ADD CONSTRAINT fk_enrollments_status
    FOREIGN KEY (enrollment_status_id) REFERENCES enrollment_statuses(id);

ALTER TABLE enrollments DROP CONSTRAINT IF EXISTS fk_enrollments_academic_year;
ALTER TABLE enrollments ADD CONSTRAINT fk_enrollments_academic_year
    FOREIGN KEY (academic_year_id) REFERENCES academic_years(id);

ALTER TABLE evaluations DROP CONSTRAINT IF EXISTS fk_evaluations_subject;
ALTER TABLE evaluations ADD CONSTRAINT fk_evaluations_subject
    FOREIGN KEY (subject_id) REFERENCES subjects(id);

ALTER TABLE evaluations DROP CONSTRAINT IF EXISTS fk_evaluations_type;
ALTER TABLE evaluations ADD CONSTRAINT fk_evaluations_type
    FOREIGN KEY (evaluation_type_id) REFERENCES evaluation_types(id);

ALTER TABLE evaluations DROP CONSTRAINT IF EXISTS fk_evaluations_status;
ALTER TABLE evaluations ADD CONSTRAINT fk_evaluations_status
    FOREIGN KEY (evaluation_status_id) REFERENCES evaluation_statuses(id);

ALTER TABLE grades DROP CONSTRAINT IF EXISTS fk_grades_student;
ALTER TABLE grades ADD CONSTRAINT fk_grades_student
    FOREIGN KEY (student_id) REFERENCES students(id);

ALTER TABLE grades DROP CONSTRAINT IF EXISTS fk_grades_evaluation;
ALTER TABLE grades ADD CONSTRAINT fk_grades_evaluation
    FOREIGN KEY (evaluation_id) REFERENCES evaluations(id);

ALTER TABLE grades DROP CONSTRAINT IF EXISTS fk_grades_status;
ALTER TABLE grades ADD CONSTRAINT fk_grades_status
    FOREIGN KEY (grade_status_id) REFERENCES grade_statuses(id);

ALTER TABLE grades DROP CONSTRAINT IF EXISTS fk_grades_teacher;
ALTER TABLE grades ADD CONSTRAINT fk_grades_teacher
    FOREIGN KEY (graded_by_teacher_id) REFERENCES teachers(id);

CREATE UNIQUE INDEX IF NOT EXISTS uk_students_rut ON students(rut);
CREATE UNIQUE INDEX IF NOT EXISTS uk_enrollments_student_course_year
    ON enrollments(student_id, course_id, academic_year_id)
    WHERE student_id IS NOT NULL AND course_id IS NOT NULL;

-- -----------------------------------------------------
-- DATOS CATÁLOGO
-- -----------------------------------------------------

INSERT INTO student_statuses (id, code, label) VALUES
    (1, 'ACTIVO', 'Activo'), (2, 'RETIRADO', 'Retirado'), (3, 'EGRESADO', 'Egresado')
ON CONFLICT (id) DO NOTHING;

INSERT INTO teacher_statuses (id, code, label) VALUES
    (1, 'ACTIVO', 'Activo'), (2, 'INACTIVO', 'Inactivo')
ON CONFLICT (id) DO NOTHING;

INSERT INTO course_statuses (id, code, label) VALUES
    (1, 'ACTIVO', 'Activo'), (2, 'CERRADO', 'Cerrado')
ON CONFLICT (id) DO NOTHING;

INSERT INTO enrollment_statuses (id, code, label) VALUES
    (1, 'ACTIVO', 'Activo'), (2, 'SUSPENDIDO', 'Suspendido'), (3, 'RETIRADO', 'Retirado')
ON CONFLICT (id) DO NOTHING;

INSERT INTO evaluation_types (id, code, label) VALUES
    (1, 'PRUEBA', 'Prueba'), (2, 'CONTROL', 'Control'), (3, 'TAREA', 'Tarea'), (4, 'EXAMEN', 'Examen')
ON CONFLICT (id) DO NOTHING;

INSERT INTO evaluation_statuses (id, code, label) VALUES
    (1, 'ACTIVO', 'Activo'), (2, 'CERRADO', 'Cerrado')
ON CONFLICT (id) DO NOTHING;

INSERT INTO grade_statuses (id, code, label) VALUES
    (1, 'DEFINITIVA', 'Definitiva'), (2, 'PRELIMINAR', 'Preliminar'),
    (3, 'EN_REVISION', 'En revisión'), (4, 'AUSENTE', 'Ausente')
ON CONFLICT (id) DO NOTHING;

INSERT INTO relationship_types (id, code, label) VALUES
    (1, 'MADRE', 'Madre'), (2, 'PADRE', 'Padre'), (3, 'TUTOR', 'Tutor legal'),
    (4, 'ABUELO', 'Abuelo'), (5, 'ABUELA', 'Abuela'), (6, 'TIO', 'Tío'), (7, 'TIA', 'Tía')
ON CONFLICT (id) DO NOTHING;

INSERT INTO contract_types (id, code, label) VALUES
    (1, 'PLANTA', 'Planta'), (2, 'HONORARIOS', 'Honorarios'), (3, 'REEMPLAZO', 'Reemplazo')
ON CONFLICT (id) DO NOTHING;

INSERT INTO subject_types (id, code, label) VALUES
    (1, 'OBLIGATORIA', 'Obligatoria'), (2, 'ELECTIVA', 'Electiva')
ON CONFLICT (id) DO NOTHING;

INSERT INTO shifts (id, code, label) VALUES
    (1, 'MANANA', 'Mañana'), (2, 'TARDE', 'Tarde'), (3, 'COMPLETA', 'Jornada completa')
ON CONFLICT (id) DO NOTHING;

INSERT INTO education_levels (id, code, label, stage) VALUES
    (1, '1B', '1° Básico', 'BASICA'), (2, '2B', '2° Básico', 'BASICA'),
    (3, '3B', '3° Básico', 'BASICA'), (4, '4B', '4° Básico', 'BASICA'),
    (5, '5B', '5° Básico', 'BASICA'), (6, '6B', '6° Básico', 'BASICA'),
    (7, '7B', '7° Básico', 'BASICA'), (8, '8B', '8° Básico', 'BASICA'),
    (9, '1M', '1° Medio', 'MEDIA'), (10, '2M', '2° Medio', 'MEDIA'),
    (11, '3M', '3° Medio', 'MEDIA'), (12, '4M', '4° Medio', 'MEDIA')
ON CONFLICT (id) DO NOTHING;

INSERT INTO academic_years (id, year, code, start_date) VALUES
    (1, 2025, '2025', DATE '2025-03-01'),
    (2, 2026, '2026', DATE '2026-03-01'),
    (3, 2027, '2027', DATE '2027-03-01')
ON CONFLICT (id) DO NOTHING;

-- -----------------------------------------------------
-- DATOS DEMO
-- -----------------------------------------------------

INSERT INTO teachers (rut, first_name, last_name, email, teacher_status_id, created_at, updated_at)
SELECT '11.111.111-1', 'Manuel', 'García', 'manuel@colegio.cl', 1, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP
WHERE NOT EXISTS (SELECT 1 FROM teachers WHERE rut = '11.111.111-1');

INSERT INTO guardians (rut, first_name, last_name, email, phone, relationship_id, is_primary, created_at, updated_at)
SELECT '98765432-1', 'María', 'Pérez', 'maria@correo.cl', '+56912345678', 1, TRUE, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP
WHERE NOT EXISTS (SELECT 1 FROM guardians WHERE rut = '98765432-1');

INSERT INTO students (rut, first_name, last_name, mother_last_name, email, student_status_id, guardian_id, created_at)
SELECT '12345678-9', 'Juan', 'Pérez', 'López', 'juan@correo.cl', 1,
       (SELECT id FROM guardians WHERE rut = '98765432-1' LIMIT 1), CURRENT_TIMESTAMP
WHERE NOT EXISTS (SELECT 1 FROM students WHERE rut = '12345678-9');

INSERT INTO courses (name, level_id, academic_year_id, course_status_id, created_at, updated_at)
SELECT '1° Medio', 9, 2, 1, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP
WHERE NOT EXISTS (SELECT 1 FROM courses WHERE name = '1° Medio');

INSERT INTO subjects (subject_name, subject_code, course_id, teacher_id, created_at, updated_at)
SELECT 'Matemáticas', 'MAT-101',
       (SELECT id FROM courses WHERE name = '1° Medio' LIMIT 1),
       (SELECT id FROM teachers WHERE rut = '11.111.111-1' LIMIT 1),
       CURRENT_TIMESTAMP, CURRENT_TIMESTAMP
WHERE NOT EXISTS (SELECT 1 FROM subjects WHERE subject_code = 'MAT-101');

INSERT INTO enrollments (student_id, course_id, enrollment_date, academic_year_id, enrollment_status_id, is_regular, created_at, updated_at)
SELECT
    (SELECT id FROM students WHERE rut = '12345678-9' LIMIT 1),
    (SELECT id FROM courses WHERE name = '1° Medio' LIMIT 1),
    CURRENT_DATE, 2, 1, TRUE, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP
WHERE NOT EXISTS (
    SELECT 1 FROM enrollments e
    JOIN students s ON s.id = e.student_id AND s.rut = '12345678-9'
);

INSERT INTO evaluations (name, date, subject_id, evaluation_type_id, evaluation_status_id, max_score, weight, created_at, updated_at)
SELECT 'Prueba 1', CURRENT_DATE,
       (SELECT id FROM subjects WHERE subject_code = 'MAT-101' LIMIT 1),
       1, 1, 7.0, 30.0, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP
WHERE NOT EXISTS (SELECT 1 FROM evaluations WHERE name = 'Prueba 1');

INSERT INTO grades (student_id, evaluation_id, score, grade_date, grade_status_id, graded_by_teacher_id, created_at, updated_at)
SELECT
    (SELECT id FROM students WHERE rut = '12345678-9' LIMIT 1),
    (SELECT id FROM evaluations WHERE name = 'Prueba 1' LIMIT 1),
    6.5, CURRENT_DATE, 1,
    (SELECT id FROM teachers WHERE rut = '11.111.111-1' LIMIT 1),
    CURRENT_TIMESTAMP, CURRENT_TIMESTAMP
WHERE NOT EXISTS (
    SELECT 1 FROM grades g
    JOIN students s ON s.id = g.student_id AND s.rut = '12345678-9'
    JOIN evaluations e ON e.id = g.evaluation_id AND e.name = 'Prueba 1'
);
